--- a/index.html
+++ b/index.html
@@ -627,10 +627,29 @@
         </div>
 
         <section class="contact-container">
-            <div class="detail-container"  data-aos="fade-up" data-aos-delay="45">
-                <div><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
-                <div><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
-                <div><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
+            <div class="contact-col">
+                <div class="detail-container"  data-aos="fade-up" data-aos-delay="45">
+                    <div><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
+                    <div><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
+                    <div><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
+                </div>
+                <div class="social-media">
+                    <a href="https://www.linkedin.com/in/anuki-dilara-2a2b2a228" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+
+                    <a href="https://www.instagram.com/anu_dil__/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+
+                    <a href="https://web.telegram.org/k/" target="_blank">
+                        <i class="fa-brands fa-telegram"></i>
+                    </a>
+
+                    <a href="https://github.com/Anuki-Dilara" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </div>
             </div>
 
             <div class="contact-form"  data-aos="fade-up" data-aos-delay="45">
@@ -718,7 +737,7 @@
 
 
         AOS.init({
-            duration: 2500
+            duration: 1000
         });
     </script>
 
