--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="assets/images/AD-logo.png" type="image/x-icon">
     <meta content="Anuki Dilara, Anuki Dilara, Anuki, Anuki, gdse65, software eengineering , IJSE, CMJD, portfolio, website, Dark theme website" name="keywords">
 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assignments/style.css">
     <link rel="stylesheet" href="assets/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/rolly.js@0.2.1/css/style.css">
