--- a/assignments.html
+++ b/assignments.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>assignments</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assignments/style.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 </head>
 <body>
