--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
                 </div>
             </div>
         </div>
+
     </section>
 
     <section class="portfolio" id="portfolio" data-scene>
@@ -587,7 +588,20 @@
                     </a>
                 </div>
             </div>
+            <!--<div class="cubes">
+            <span style="&#45;&#45;i:11;"></span>
+            <span style="&#45;&#45;i:15;"></span>
+            <span style="&#45;&#45;i:24;"></span>
+            <span style="&#45;&#45;i:10;"></span>
+            <span style="&#45;&#45;i:14;"></span>
+            <span style="&#45;&#45;i:23;"></span>
+            <span style="&#45;&#45;i:18;"></span>
+            <span style="&#45;&#45;i:16;"></span>
+            <span style="&#45;&#45;i:19;"></span>
+            <span style="&#45;&#45;i:20;"></span>
+        </div>-->
         </div>
+
         <a href="assignments.html">More
             <!--<i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>-->
         </a>
