--- a/index.html
+++ b/index.html
@@ -455,8 +455,8 @@
 
             <div class="row">
                 <div class="portfolio-gallery">
-
                     <div class="item" data-aos="zoom-in" data-id="java">
+                        <div class="lines"></div>
                         <div class="inner">
                             <img src="assets/images/projects/Ag1_09.jpg" alt="portfolio"/>
                             <div class="project-layer">
@@ -468,6 +468,7 @@
                         </div>
                     </div>
                     <div class="item" data-aos="zoom-in" data-id="java">
+                        <div class="lines"></div>
                         <div class="inner">
                             <img src="assets/images/projects/GST%20CAM%20939-10.jpg" alt="portfolio"/>
                             <div class="project-layer">
@@ -479,6 +480,7 @@
                         </div>
                     </div>
                     <div class="item" data-aos="zoom-in" data-id="java">
+                        <div class="lines"></div>
                         <div class="inner">
                             <img src="assets/images/projects/hostelProject-img.jpeg" alt="portfolio"/>
                             <div class="project-layer">
@@ -490,6 +492,7 @@
                         </div>
                     </div>
                     <div class="item" data-aos="zoom-in" data-id="java">
+                        <div class="lines"></div>
                         <div class="inner">
                             <img src="assets/images/projects/chat-04.jpg" alt="portfolio"/>
                             <div class="project-layer">
@@ -501,6 +504,7 @@
                         </div>
                     </div>
                     <div class="item" data-aos="zoom-in" data-id="web">
+                        <div class="lines"></div>
                         <div class="inner">
                             <img src="assets/images/projects/portfolioProject.webp" alt="portfolio"/>
                             <div class="project-layer">
@@ -512,6 +516,7 @@
                         </div>
                     </div>
                     <div class="item" data-aos="zoom-in" data-id="design">
+                        <div class="lines"></div>
                         <div class="inner">
                             <img src="assets/images/projects/Ag1_09.jpg" alt="portfolio"/>
                             <div class="project-layer">
