--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                         <div class="education-content">
                             <div class="content" data-aos="fade-left" data-aos-delay="20">
-                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <div class="year"><i class='bx bxs-calendar'></i>2013-2018</div>
                                 <h2>G.C.E Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
                             </div>
@@ -149,7 +149,7 @@
 
                         <div class="education-content">
                             <div class="content" data-aos="fade-left" data-aos-delay="30">
-                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <div class="year"><i class='bx bxs-calendar'></i>2018-2021-2012</div>
                                 <h2>G.C.E Advanced Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
                             </div>
@@ -157,7 +157,7 @@
 
                         <div class="education-content">
                             <div class="content" data-aos="fade-left" data-aos-delay="40">
-                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <div class="year"><i class='bx bxs-calendar'></i>2022-2024</div>
                                 <h2>Graduated Diploma in IJSE</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
                             </div>
