--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="about-img" data-aos="zoom-out">
-            <img src="assets/images/imgonline.jpg" alt=""/>
+            <img src="assets/images/about-image.jpg" alt=""/>
             <span class="circle-spin"></span>
         </div>
 
