--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                             <img src="assets/images/projects/Ag1_09.jpg" alt="portfolio"/>
                             <div class="project-layer">
                                 <h4>Connect Four Game</h4>
-                                <a href="assignments/CSS/CSS/CASE-01/index.html" target="_blank">
+                                <a href="https://github.com/Anuki-Dilara/connect-four-game" target="_blank">
                                     <i class='bx bx-plus' ></i>
                                 </a>
                             </div>
