--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
                 <h3 class="topic-section">My<span>&nbsp;Skills</span></h3>
             </div>
             <div class="skills" id="skills" data-aos="fade-up">
-                <div class="skills-sub-topic-div"><div class="skills-sub-topic-line"></div><h4 class="skills-sub-topic">Languages</h4><div class="skills-sub-topic-line"></div></div>
+                <div class="skills-sub-topic-div">
+                    <div class="skills-sub-topic-line"></div>
+                    <h4 class="skills-sub-topic">Hard Skills</h4>
+                    <div class="skills-sub-topic-line"></div>
+                </div>
                 <div class="skill-row">
                     <div class="skill-column">
                         <div class="skill-box">
@@ -210,19 +214,31 @@
                 </div>
             </div>
 
-            <div class="tools" data-aos="fade-up" data-aos-delay="20">
+            <!--<div class="skills">
+                <div class="tool-container" data-aos="fade-up" data-aos-delay="20">
+                    <img src="assets/images/skills/intelij-logo.png"/>
+                    <img src="assets/images/skills/netbeans-logo.png"/>
+                    <img src="assets/images/skills/figma-logo.png"/>
+                    <img src="assets/images/skills/SceneBuilderLogo.webp"/>
+                    <img src="assets/images/skills/jasper-soft-icon.png"/>
+                </div>
+            </div>-->
+
+            <div class="skills" data-aos="fade-up" data-aos-delay="40">
                 <div class="skills-sub-topic-div">
                     <div class="skills-sub-topic-line"></div>
-                    <h4 class="skills-sub-topic">Tools</h4>
+                    <h4 class="skills-sub-topic">Soft Skills</h4>
                     <div class="skills-sub-topic-line"></div>
                 </div>
                 <div class="tool-container">
-                    <div class="tool" id="intelij">
+                    <div class="soft-skill" id="creativity">
                         <div class="outer">
                             <div class="inner">
                                 <div class="number">
-                                    65%
-                                    <img src="assets/images/skills/intelij-logo.png" height="40" width="40"/></div>
+                                    75%
+                                    <h5>Creativity</h5>
+                                    <!--<img src="assets/images/skills/intelij-logo.png" height="40" width="40"/>-->
+                                </div>
                             </div>
                         </div>
 
@@ -236,12 +252,14 @@
                             <circle cx="80" cy="80" r="70" stroke-linecap="round" />
                         </svg>
                     </div>
-                    <div class="tool" id="net-beans">
+                    <div class="soft-skill" id="workEthic">
                         <div class="outer">
                             <div class="inner">
                                 <div class="number">
-                                    65%
-                                    <img src="assets/images/skills/netbeans-logo.png" height="40" width="40"/></div>
+                                    90%
+                                    <h5>Work Ethic</h5>
+                                    <!--<img src="assets/images/skills/netbeans-logo.png" height="40" width="40"/>-->
+                                </div>
                             </div>
                         </div>
 
@@ -255,12 +273,14 @@
                             <circle cx="80" cy="80" r="70" stroke-linecap="round" />
                         </svg>
                     </div>
-                    <div class="tool" id="scene-builder">
+                    <div class="soft-skill" id="adaptability">
                         <div class="outer">
                             <div class="inner">
                                 <div class="number">
                                     85%
-                                    <img src="assets/images/skills/SceneBuilderLogo.webp" height="40" width="40"/></div>
+                                    <h5>Adaptability</h5>
+                                   <!-- <img src="assets/images/skills/SceneBuilderLogo.webp" height="40" width="40"/>-->
+                                </div>
                             </div>
                         </div>
 
@@ -274,12 +294,14 @@
                             <circle cx="80" cy="80" r="70" stroke-linecap="round" />
                         </svg>
                     </div>
-                    <div class="tool" id="figma">
+                    <div class="soft-skill" id="communication">
                         <div class="outer">
                             <div class="inner">
                                 <div class="number">
                                     80%
-                                    <img src="assets/images/skills/figma-logo.png" height="40" width="40"/></div>
+                                    <h5>Communication</h5>
+                                    <!--<img src="assets/images/skills/figma-logo.png" height="40" width="40"/>-->
+                                </div>
                             </div>
                         </div>
 
@@ -295,6 +317,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="bubbles">
                 <span style="--i:11;"></span>
                 <span style="--i:12;"></span>
