--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
                         <div class="inner">
                             <img src="assets/images/projects/Ag1_09.jpg" alt="portfolio"/>
                             <div class="project-layer">
-                                <h4>Assignment 1</h4>
-                                <a href="assignments/CSS/CSS/CASE-01/index.html" target="_blank">
+                                <h4>Figma Design</h4>
+                                <a href="https://www.figma.com/file/5rjQ2ltY2Q00MQ6qAHfvtr/Untitled?type=design&node-id=0-1&mode=design&t=RZdLV95hP09gQzDF-0" target="_blank">
                                     <i class='bx bx-plus' ></i>
                                 </a>
                             </div>
@@ -604,18 +604,7 @@
                     </a>
                 </div>
             </div>
-            <!--<div class="cubes">
-            <span style="&#45;&#45;i:11;"></span>
-            <span style="&#45;&#45;i:15;"></span>
-            <span style="&#45;&#45;i:24;"></span>
-            <span style="&#45;&#45;i:10;"></span>
-            <span style="&#45;&#45;i:14;"></span>
-            <span style="&#45;&#45;i:23;"></span>
-            <span style="&#45;&#45;i:18;"></span>
-            <span style="&#45;&#45;i:16;"></span>
-            <span style="&#45;&#45;i:19;"></span>
-            <span style="&#45;&#45;i:20;"></span>
-        </div>-->
+
         </div>
 
         <a href="assignments.html">More
